--- a/src/components/initial-page/initial-page.scss
+++ b/src/components/initial-page/initial-page.scss
@@ -1,7 +1,7 @@
 .initial-page {
     height: 100%;
     width: 100%;
-    background: url('../../assets/initial-page/bg.png') center no-repeat;
+    background: url('../../assets//bg.png') center no-repeat;
     background-size: cover;
     display: flex;
     align-items: center;
