--- a/src/components/ui/ui-settings-bar/ui-settings-bar.scss
+++ b/src/components/ui/ui-settings-bar/ui-settings-bar.scss
@@ -10,7 +10,7 @@
         rgba(227, 220, 255, 0.2) 100%
     );
     backdrop-filter: blur(30px);
-    padding: 75px 10px 0 30px;
+    padding: 4% 2px 0 1.5%;
     border: 2px solid white;
 
     @media (max-width: 1280px) {
@@ -34,7 +34,7 @@
     }
 
     &__extra {
-        margin-top: 12px;
+        margin-top: 14px;
     }
 
     .title {
@@ -42,7 +42,7 @@
         font-style: normal;
         font-weight: 600;
         font-size: 24px;
-        line-height: 29px;
+        line-height: 1.2;
 
         text-transform: uppercase;
 
@@ -54,18 +54,18 @@
         flex-direction: column;
         justify-content: space-between;
         align-items: flex-start;
-
-        &__title {
-            margin-bottom: 30px;
-        }
+        height: 26vh;
 
         &__create-container {
-            margin-bottom: 60px;
+            width: 100%;
+            &:first-of-type {
+                margin-bottom: 10%;
+            }
             div {
                 display: flex;
                 flex-direction: row;
                 align-items: center;
-                justify-content: center;
+                justify-content: space-between;
             }
 
             &_title {
@@ -73,7 +73,7 @@
                 font-style: normal;
                 font-weight: 500;
                 font-size: 16px;
-                line-height: 19px;
+                line-height: 1.18;
                 margin-bottom: 10px;
 
                 color: #999999;
@@ -81,8 +81,10 @@
             &_input {
                 border: none;
                 padding: 3px 10px;
-                width: 187px;
-                height: 40px;
+                width: 75%;
+                height: 8vh;
+                max-height: 40px;
+                min-height: 30px;
                 left: 0px;
                 top: 0px;
                 margin-right: 10px;
@@ -99,9 +101,11 @@
 
             &_button {
                 border: none;
-                width: 83px;
-                height: 40px;
-                left: 197px;
+                width: 39%;
+                height: 8vh;
+                max-height: 40px;
+                min-height: 30px;
+                left: 62%;
                 top: 0px;
 
                 background: #0085ff;
@@ -113,7 +117,7 @@
                 font-style: normal;
                 font-weight: 500;
                 font-size: 12px;
-                line-height: 14px;
+                line-height: 1.16;
 
                 text-transform: uppercase;
 
@@ -123,6 +127,7 @@
     }
 
     .tags {
+        margin-top: 22%;
         ul {
             padding: 0;
             display: flex;
@@ -157,7 +162,7 @@
     }
 
     .comunity {
-        margin-top: 55px;
+        margin-top: 20%;
         ul {
             padding: 0;
             display: flex;
@@ -191,18 +196,19 @@
     }
 
     .working-on {
-        margin-top: 60px;
+        margin-top: 23%;
         ul {
             padding: 0 13px;
             list-style: square url('../../../assets/global/red-cross.svg');
         }
 
         &__item {
+            text-overflow: ellipsis;
             font-family: SF Pro Display;
             font-style: normal;
             font-weight: normal;
             font-size: 16px;
-            line-height: 19px;
+            line-height: 1.18;
             margin-top: 10px;
             color: #999999;
         }
